[tool.poetry]
name = "ccs-cost-calculator-api"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.8"
Flask-Cors = "^3.0.10"
PyYAML = "^6.0"
google-cloud-storage = "^2.1.0"
pycel = "^1.0b30"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
unittest-xml-reporting = "^3.2.0"

[build-system]
build-backend = "poetry.core.masonry.api"
